--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,26 +1,22 @@
-# Starter pipeline
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
     deploymentScope: 'Resource Group'
     azureResourceManagerConnection: 'AzureRmPipeline-conn'
     subscriptionId: '17ec80f8-38b3-4c43-9c8f-e4e8b8496f01'
     action: 'Create Or Update Resource Group'
-    resourceGroupName: 'AzureRmPipeline-rg'
+    resourceGroupName: 'PraticaARM'
     location: 'Central US'
     templateLocation: 'Linked artifact'
     csmFile: 'CreateWebApp/azuredeploy.json'
     overrideParameters: |
-      -projectName arm031 -linkedTemplateUri 
+      -projectName arm -linkedTemplateUri 
       https://raw.githubusercontent.com/lfogaca43/arm/master/CreateWebApp/linkedStorageAccount.json
     deploymentMode: 'Incremental'
     deploymentName: 'DeployPipelineTemplate'
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
 
-trigger:
-- master
+    trigger:
+    - master
 
-pool:
-  vmImage: 'ubuntu-latest'
+    pool:
+      vmImage: 'Ubuntu-latest'
 
